@@ -3,7 +3,7 @@ package com.carterprojects.movienightmanager.mapper;
 import com.carterprojects.movienightmanager.model.dto.MovieNightSegmentDto;
 import com.carterprojects.movienightmanager.repository.models.MovieNightSegment;
 
-import java.util.stream.Collectors;
+import java.util.Collections;
 
 public class MovieNightSegmentMapper {
     public static MovieNightSegmentDto segmentToSegmentDto(MovieNightSegment segment) {
@@ -13,7 +13,14 @@ public class MovieNightSegmentMapper {
                 .nominationLockDate(segment.getNominationLockDate())
                 .chosenWatchDate(segment.getChosenWatchDate())
                 .segmentEndDate(segment.getSegmentEndDate())
-                .nominations(segment.getNominations().stream().map(NominationsMapper::nominationToNominationWithLikesDto).collect(Collectors.toList()))
+                .nominations(
+                    segment.getNominations() == null ?
+                    Collections.emptyList() :
+                    segment.getNominations()
+                        .stream()
+                        .map(NominationsMapper::nominationToNominationWithLikesDto)
+                        .toList()
+                )
                 .build();
     }
 }
